# cosc345

./: .codedocs  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  clean_build.sh  diff  diff2  file_chooser.cpp  gcc-toolchain.cmake  matt_report_draft.md  move_app.sh  newcmakelist  report.md  test.txt  test_file
.github/: pull_request_template.md
.github/workflows/: cmake.yml  code_cov_ubuntu.yml  ubuntu.yml  windows.yml
cmake/: App.cmake  Info.plist.in
doc/html/: _diglot_8cpp.html  _diglot_8cpp.js  _diglot_8h.html  _diglot_8h_source.html  _my_app_8cpp.html  _my_app_8cpp.js  _my_app_8h.html  _my_app_8h.js  _my_app_8h_source.html  annotated.html  annotated_dup.js  class_my_app-members.html  class_my_app.html  class_my_app.js  classes.html  dir_4e4e2e75df7fa6971448b424c011c8b5.html  dir_4e4e2e75df7fa6971448b424c011c8b5.js  dir_5c6ab7472b8c0e1df3664d54353268b7.html  dir_5c6ab7472b8c0e1df3664d54353268b7.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d4c4b55e98ca2bfea0cb032b9483df35.html  dir_d4c4b55e98ca2bfea0cb032b9483df35.js  dir_e0348abbe6f8b441e35e9ecf4dbcc4df.html  dir_e0348abbe6f8b441e35e9ecf4dbcc4df.js  dir_f65f201b730b8a119ad8c9eb16e3f3ed.html  dir_f65f201b730b8a119ad8c9eb16e3f3ed.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main__substituter_8cpp.html  main__substituter_8cpp.js  (+14 more)
doc/html/search/: all_1.js  all_2.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_1.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
doc/latex/: _diglot_8cpp.tex  _diglot_8h.tex  _diglot_8h_source.tex  _my_app_8cpp.tex  _my_app_8h.tex  _my_app_8h_source.tex  annotated.tex  class_my_app.eps  class_my_app.tex  dir_4e4e2e75df7fa6971448b424c011c8b5.tex  dir_5c6ab7472b8c0e1df3664d54353268b7.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d4c4b55e98ca2bfea0cb032b9483df35.tex  dir_e0348abbe6f8b441e35e9ecf4dbcc4df.tex  dir_f65f201b730b8a119ad8c9eb16e3f3ed.tex  files.tex  hierarchy.tex  main_8cpp.tex  main__substituter_8cpp.tex  main__translator_8cpp.tex  pos_8cpp.tex  refman.tex  substituter_8cpp.tex  substituter_8h.tex  substituter_8h_source.tex  translator_8h.tex  translator_8h_source.tex
planning/: meeting_notes_1.md  notes_26_07  tut_notes.md
pos_data/: hound  hound.test
pos_tagging/: pos.cpp  pos_tagger.py
src/: Diglot.cpp  Diglot.h
src/Data/books/NZ_based_books/: The Project Gutenberg EBook of Maori Religion and Mythology.txt  The Project Gutenberg EBook of Te Tohunga, by Wilhelm Dittmer.txt  The Project Gutenberg EBook of The Treaty of Waitangi, by T. Lindsay Buick.txt  The Project Gutenberg eBook of A Lively Bit of the Front A Tale of the New Zealand Rifles on the Western Front.txt  The Project Gutenberg eBook of History of Australia and New Zealand.txt
src/Data/books/top_ebooks/: 10007.txt  11.txt  1184.txt  120.txt  1232.txt  1259.txt  1260.txt  1280.txt  132.txt  1342.txt  135.txt  1355.txt  1399.txt  1400.txt  145.txt  14640.txt  1497.txt  1513.txt  158.txt  16.txt  161.txt  16328.txt  16389.txt  16464.txt  1727.txt  174.txt  1952.txt  1998.txt  205.txt  2160.txt  219.txt  22515.txt  236.txt  244.txt  2500.txt  25344.txt  2542.txt  2554.txt  2591.txt  2600.txt  (+68 more)
src/Data/clean_data/: english_to_maori_dictionary.json  english_to_maori_dictionary_no_pos.json  english_to_maori_dictionary_pos.json  maori_frequencies.json
src/Data/raw_data/: gold_labels_corrected.xlsx  maori_word_frequency.docx
src/Data/scripts/: database_maker.py  english_word_frequency.py  fix_book_titles.py  gather_books.py  make_dictionary.py  maori_word_frequency.py  maori_word_frequency_gather.py
src/GUI/: MyApp.cpp  MyApp.h  logging.cpp  logging.h
src/GUI/assets/: app.html  app.js  books.html  books.json  layout.css  library.html  load_books.js  reader.html  style.css  text.txt  theme.css
src/Substituter/: main_substituter.cpp  substituter.cpp
src/Substituter/include/: substituter.h
src/Translator/: dict.sqlite  dictionary.cpp  dictionary.h  main_translator.cpp  pos.cpp  translator.cpp
src/Translator/include/: translator.h
src/Translator/pos_tagging/: intergrated_python.cpp  interop.cpp  interop.linux  pos  pos.cpp  pos_tagger.py  pos_tagger.spec
test_data/: test.txt  translated.test
tests/: tests.cpp
tests/Data/: test_english_word_frequency.py  test_make_dictionary.py  test_maori_word_frequency.py
tests/Data/test_io_data/: expected_output_dictionary_no_pos.json
tests/Test/: tests.cpp
tests/Translator/: translator_test.cpp
